--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
         </section>
       </main>
       <footer class="footer">
-        2023 © Spots
+        <p class="footer__copyright">
+          2025 &copy; Spots
+        </p>
       </footer>
     </div>
   </body>
