fix relative file path

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       name="keywords"
       content="photos, travel, spots, sharing, photography, social"
     />
-    <link rel="stylesheet" href="pages/index.css" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="icon" href="./favicon.ico" />
     <title>Spots</title>
   </head>
   <body>
