--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
-                <button type="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn aria-label="Like card""></button>
               </div>
             </li>
             <li class="card">
@@ -68,7 +68,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Restaurant terrace</h2>
-                <button type="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn aria-label="Like card""></button>
               </div>
             </li>
             <li class="card">
@@ -79,7 +79,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">An outdoor cafe</h2>
-                <button type="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn aria-label="Like card""></button>
               </div>
             </li>
             <li class="card">
@@ -92,7 +92,7 @@
                 <h2 class="card__title">
                   A very long bridge, over the forest...
                 </h2>
-                <button type="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn aria-label="Like card""></button>
               </div>
             </li>
             <li class="card">
@@ -103,7 +103,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
-                <button type="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn aria-label="Like card""></button>
               </div>
             </li>
             <li class="card">
@@ -114,7 +114,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
-                <button type="button" class="card__like-btn"></button>
+                <button type="button" class="card__like-btn "></button>
               </div>
             </li>
           </ul>
