--- a/index.html
+++ b/index.html
@@ -51,16 +51,21 @@
           <ul class="cards__list">
             <template id="card-template">
               <li class="card">
-              <img
-                src="#"
-                alt=""
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title"></h2>
-                <button type="button" class="card__like-btn aria-label="Like card""></button>
-              </div>
-            </li>
+                <button
+                  type="button"
+                  class="card__del-btn"
+                  aria-label="Delete card"
+                ></button>
+                <img src="#" alt="" class="card__image" />
+                <div class="card__content">
+                  <h2 class="card__title"></h2>
+                  <button
+                    type="button"
+                    class="card__like-btn"
+                    aria-label="Like card"
+                  ></button>
+                </div>
+              </li>
             </template>
           </ul>
         </section>
@@ -122,7 +127,20 @@
           </form>
         </div>
       </div>
+      <div class="modal" id="image-preview-modal">
+        <div class="modal__image-container">
+          <button
+            type="button"
+            class="modal__close-btn modal__close-btn_type_preview"
+            aria-label="Close modal"
+          ></button>
+          <img class="modal__image" src="#" alt="" />
+          <div class="modal__caption-bg">
+            <p class="modal__caption">Golden Gate Bridge</p>
+          </div>
+        </div>
+      </div>
+      <script src="./scripts/index.js"></script>
     </div>
-    <script src="./scripts/index.js"></script>
   </body>
 </html>
